Update LaptopConfiguratorModellazioneGestioneConoscezaApp