@@ -38,10 +38,10 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:2.0.0'
 
     // JavaFX dependencies for Windows
-    implementation "org.openjfx:javafx-controls:20.0.2:win"
-    implementation "org.openjfx:javafx-fxml:20.0.2:win"
-    implementation "org.openjfx:javafx-base:20.0.2:win"
-    implementation "org.openjfx:javafx-graphics:20.0.2:win"
+    implementation "org.openjfx:javafx-controls:17:win"
+    implementation "org.openjfx:javafx-fxml:17:win"
+    implementation "org.openjfx:javafx-base:17:win"
+    implementation "org.openjfx:javafx-graphics:17:win"
 
     // Dependencies for testing
     // Dipendenza per JUnit
@@ -62,11 +62,18 @@ test {
 }
 
 application {
-    // Define the main class for the application.
-    mainClass = 'org.example.App'
+    mainClass = 'org.example.app.LaptopConfiguratorModellazioneGestioneConoscezaApp'
+    applicationDefaultJvmArgs = [
+            '--module-path', 'C:\\Users\\leona\\Downloads\\javafx-sdk-17.0.13',
+            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
 }
 
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+
+tasks.named('run', JavaExec) {
+    standardInput = System.in
 }
